fixed small bugs, works on iOS now
- Removed the height-thing in core-animated-pages
- the ‘getpermissions’ had a wrong reference to ao-globals: forgot two
extra times “../“ —> added that, now working

--- a/public/apps/aos-babbles/aos-babbles.css
+++ b/public/apps/aos-babbles/aos-babbles.css
@@ -1,9 +1,9 @@
 :host {
 	display: block;
-	height: 100%;
+/*	height: 100%;
 	width: 100%;
 	margin: 0px;
-	padding: 0px;
+	padding: 0px;*/
 
 }
 
@@ -28,10 +28,10 @@ small {
 	font-weight: 400;
 }
 
-#canvas {
+.canvas {
 	display: block;
-	/*overflow: hidden;*/
-	height: 100%;
+	/*overflow: hidden;
+	height: 100%;*/
 	background-color: white;
 	margin: 0px;
 	padding: 20px 12% 0px 12%;
